Reading the template file the correct way